Bug 641137 crash [@ nsMsgDBView::GetInsertIndexHelper | nsMsgQuickSearchDBView::SortThreads] r=bienvenu